# macroclaw

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
automation/: app.py  cli.py  computer_use.py  export.py  recorder.py  vision.py
config/: config.example.yaml
config/launchd/: com.macroclaw.daily-export.plist  com.macroclaw.watcher.plist
openclaw-skill/: README.md  SKILL.md  _meta.json  package.json
pipeline/: cli.py  ingest.py  queries.py  schema.py  watcher.py
scripts/: install.sh  setup_launchd.sh
sikuli/: README.md
sikuli/images/: CAPTURE_GUIDE.md
sikuli/scripts/: bulk_export.py  bulk_export.sh  common.py  daily_export.py  daily_export.sh
